--- a/05.ipynb
+++ b/05.ipynb
@@ -27,24 +27,16 @@
    "source": [
     "if some_condition:\n",
     "    \n",
-    "    algorithm"
+    "    statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 12\n",
     "if x >10:\n",
@@ -64,28 +56,20 @@
    "source": [
     "if some_condition:\n",
     "    \n",
-    "    algorithm\n",
+    "    statement\n",
     "    \n",
     "else:\n",
     "    \n",
-    "    algorithm"
+    "    statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 12\n",
     "if x > 10:\n",
@@ -109,32 +93,24 @@
    "source": [
     "if some_condition:\n",
     "    \n",
-    "    algorithm\n",
+    "    statement\n",
     "\n",
     "elif some_condition:\n",
     "    \n",
-    "    algorithm\n",
+    "    statement\n",
     "\n",
     "else:\n",
     "    \n",
-    "    algorithm"
+    "    statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x<y\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10\n",
     "y = 12\n",
@@ -150,25 +126,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "if statement inside a if statement or if-elif or if-else are called as nested if statements."
+    "if statements inside another if/if-elif/if-else statement are called \"nested if statements\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x<y\n",
-      "x=10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10\n",
     "y = 12\n",
@@ -206,28 +173,16 @@
    "source": [
     "for variable in something:\n",
     "    \n",
-    "    algorithm"
+    "    statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(5):\n",
     "    print i"
@@ -242,21 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n",
-      "[4, 5, 6]\n",
-      "[7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_of_lists = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
     "for list1 in list_of_lists:\n",
@@ -272,27 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_of_lists = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
     "for list1 in list_of_lists:\n",
@@ -315,26 +244,16 @@
    "source": [
     "while some_condition:\n",
     "    \n",
-    "    algorithm"
+    "    statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "4\n",
-      "Bye\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 1\n",
     "while i < 3:\n",
@@ -354,31 +273,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the name says. It is used to break out of a loop when a condition becomes true when executing the loop."
+    "As the name says, **break** is used to break out of a loop when a condition becomes true during the execution of the loop."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(100):\n",
     "    print i\n",
@@ -402,28 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "The end.\n",
-      "The end.\n",
-      "The end.\n",
-      "The end.\n",
-      "The end.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(10):\n",
     "    if i>4:\n",
@@ -444,24 +331,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python makes it simple to generate a required list with a single line of code using list comprehensions. For example If i need to generate multiples of say 27 I write the code using for loop as,"
+    "Python makes it simple to generate a required list with a single line of code using list comprehensions. For example If i need to generate multiples of say 27 I write the code using for loop as:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = []\n",
     "for i in range(1,11):\n",
@@ -479,22 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[27*x for x in range(1,11)]"
    ]
@@ -503,34 +371,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's it!. Only remember to enclose it in square brackets"
+    "That's it. The first bit of the code is always the calculation you want to do, followed by a white space and then the necessary loop. Finally, you need to remember to enclose the full statement in square brackets **[ ]**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Understanding the code, The first bit of the code is always the algorithm and then leave a space and then write the necessary loop. But you might be wondering can nested loops be extended to list comprehensions? Yes you can."
+    "You can also use nested loops for list comprehensions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[27*x for x in range(1,20) if x<=10]"
    ]
@@ -539,30 +396,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let me add one more loop to make you understand better, "
+    "Here is another nested loop:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[27*z for i in range(50) if i==27 for z in range(1,11)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -581,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
