--- a/09.ipynb
+++ b/09.ipynb
@@ -18,13 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Section contents\n",
     "\n",
     "* Elementwise operations\n",
@@ -958,6 +951,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Loading data - more flexible ways"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If  **loadfromtxt( )** is not sufficient, then you can use **genfromtxt( )**, which provides a more flexible frontend for reading files. \n",
+    "\n",
+    "numpy.genfromtxt(fname, dtype=<type 'float'>, comments='#', delimiter=None, skip_header=0, skip_footer=0, converters=None, missing_values=None, filling_values=None, usecols=None, names=None, excludelist=None, deletechars=None, replace_space='_', autostrip=False, case_sensitive=True, defaultfmt='f%i', unpack=None, usemask=False, loose=True, invalid_raise=True, max_rows=None)\n",
+    "\n",
+    "https://docs.scipy.org/doc/numpy/reference/generated/numpy.genfromtxt.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Broadcasting / array extension"
    ]
   },
@@ -1044,7 +1055,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An useful trick:\n"
+    "A useful trick with which to extend one array by another, which we have already used:"
    ]
   },
   {
