added importing and file i/o examples

--- a/06.ipynb
+++ b/06.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Functions"
+    "# Functions"
    ]
   },
   {
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Return Statement"
+    "## Return Statement"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Implicit arguments"
+    "## Implicit arguments"
    ]
   },
   {
@@ -417,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Variable number of arguments"
+    "## Variable number of arguments"
    ]
   },
   {
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Global and Local Variables"
+    "## Global and Local Variables"
    ]
   },
   {
@@ -588,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Lambda Functions"
+    "## Lambda Functions"
    ]
   },
   {
@@ -624,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###map"
+    "### map"
    ]
   },
   {
@@ -712,7 +712,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###filter"
+    "### filter"
    ]
   },
   {
@@ -788,13 +788,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "## Importing packages: example with file I/O"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python has thousands of additional libraries that provide functionality beyond the basic language capabilities. \n",
+    "\n",
+    "Specific libraries can be imported using the keyword **import**. Additionally, this also works with functions that reside in a file in the search path.\n",
+    "\n",
+    "As an example, let's go through the files in a directory and print out some information about them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "\n",
+    "ipynbCount=0;\n",
+    "for f in os.listdir('.'):\n",
+    "    if f.endswith('.ipynb'):\n",
+    "        ipynbCount=ipynbCount+1\n",
+    "print 'Found '+ str(ipynbCount) + ' ipython notebook files in current directory'\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Requests** is a very nice package that allows to do web-queries. You probably need to install this first via pip:\n",
+    "\n",
+    "`pip install requests`\n",
+    "\n",
+    "Here is an example that looks for papers on PubMed that have to do with **deep learning** and **fMRI**. Results are are being loaded from a webpage via the **requests** package and then parsed via regular expressions and the webbrowser packages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import re\n",
+    "import webbrowser\n",
+    "url = \"http://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi\"\n",
+    "param_dict = {'db':'pubmed', 'term':'deep learning fMRI', 'rettype':'uilist'}\n",
+    "\n",
+    "r = requests.get(url, params=param_dict)\n",
+    "\n",
+    "# now we use a very fancy regular expression to get all numbers that are\n",
+    "# exactly 8 digits long - that's the identifier of the PubMed paper\n",
+    "papers = re.findall(\"\\\\b\\\\d{8}\\\\b\",r.text)\n",
+    "\n",
+    "# open the first three papers in the default browser\n",
+    "for p in papers[0:3]:\n",
+    "    url = \"https://www.ncbi.nlm.nih.gov/pubmed/\" + p\n",
+    "    webbrowser.open_new(url)\n"
+   ]
   }
  ],
  "metadata": {
