update to Python3

--- a/05.ipynb
+++ b/05.ipynb
@@ -2,28 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "All the IPython Notebooks in this lecture series are available at https://github.com/cwallraven/Python-Lectures/"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "#Control Flow Statements"
+    "# Control Flow Statements"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "##If"
+    "## If"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "if some_condition:\n",
     "    \n",
@@ -34,25 +46,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "x = 12\n",
     "if x >10:\n",
-    "    print \"Hello\""
+    "    print(\"Hello\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "##If-else"
+    "## If-else"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "if some_condition:\n",
     "    \n",
@@ -67,28 +87,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "x = 12\n",
     "if x > 10:\n",
-    "    print \"hello\"\n",
+    "    print(\"hello\")\n",
     "else:\n",
-    "    print \"world\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##if-elif"
+    "    print(\"world\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## if-elif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "if some_condition:\n",
@@ -108,23 +135,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "x = 10\n",
     "y = 12\n",
     "if x > y:\n",
-    "    print \"x>y\"\n",
+    "    print(\"x>y\")\n",
     "elif x < y:\n",
-    "    print \"x<y\"\n",
+    "    print(\"x<y\")\n",
     "else:\n",
-    "    print \"x=y\""
+    "    print(\"x=y\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "if statements inside another if/if-elif/if-else statement are called \"nested if statements\"."
    ]
@@ -133,42 +165,52 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "x = 10\n",
     "y = 12\n",
     "if x > y:\n",
-    "    print \"x>y\"\n",
+    "    print(\"x>y\")\n",
     "elif x < y:\n",
-    "    print \"x<y\"\n",
+    "    print(\"x<y\")\n",
     "    if x==10:\n",
-    "        print \"x=10\"\n",
+    "        print(\"x=10\")\n",
     "    else:\n",
-    "        print \"invalid\"\n",
+    "        print(\"invalid\")\n",
     "else:\n",
-    "    print \"x=y\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##Loops"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###For"
+    "    print(\"x=y\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### For"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "for variable in something:\n",
@@ -180,17 +222,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "for i in range(5):\n",
-    "    print i"
+    "    print(i)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "In the above example, i iterates over the 0,1,2,3,4. Every time it takes each value and executes the algorithm inside the loop. It is also possible to iterate over a nested list illustrated below."
    ]
@@ -199,18 +246,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "list_of_lists = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
     "for list1 in list_of_lists:\n",
-    "        print list1"
+    "        print(list1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "A use case of a nested for loop in this case would be,"
    ]
@@ -219,27 +271,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "list_of_lists = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
     "for list1 in list_of_lists:\n",
     "    for x in list1:\n",
-    "        print x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###While"
+    "        print(x)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### While"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "while some_condition:\n",
@@ -251,27 +310,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "i = 1\n",
     "while i < 3:\n",
-    "    print(i ** 2)\n",
+    "    print((i ** 2))\n",
     "    i = i+1\n",
     "print('Bye')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "##Break"
+    "## Break"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "As the name says, **break** is used to break out of a loop when a condition becomes true during the execution of the loop."
    ]
@@ -280,26 +347,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "for i in range(100):\n",
-    "    print i\n",
+    "    print(i)\n",
     "    if i>=7:\n",
     "        break"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "##Continue"
+    "## Continue"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This continues the rest of the loop. Sometimes when a condition is satisfied there are chances of the loop getting terminated. This can be avoided using continue statement. "
    ]
@@ -308,28 +383,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "for i in range(10):\n",
     "    if i>4:\n",
-    "        print \"The end.\"\n",
+    "        print(\"The end.\")\n",
     "        continue\n",
     "    elif i<7:\n",
-    "        print i"
+    "        print(i)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "##List Comprehensions"
+    "## List Comprehensions"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Python makes it simple to generate a required list with a single line of code using list comprehensions. For example If i need to generate multiples of say 27 I write the code using for loop as:"
    ]
@@ -338,7 +421,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -346,21 +431,26 @@
     "for i in range(1,11):\n",
     "    x = 27*i\n",
     "    res.append(x)\n",
-    "print res"
+    "print(res)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "Since you are generating another list altogether and that is what is required, List comprehensions is a more efficient way to solve this problem."
+    "Since you are generating another list altogether and that is what is required, List comprehensions are a more efficient way to solve this problem."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -369,14 +459,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "That's it. The first bit of the code is always the calculation you want to do, followed by a white space and then the necessary loop. Finally, you need to remember to enclose the full statement in square brackets **[ ]**."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "You can also use nested loops for list comprehensions."
    ]
@@ -385,7 +481,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -394,7 +492,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Here is another nested loop:"
    ]
@@ -403,7 +504,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -414,7 +517,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -422,21 +527,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
