--- a/02.ipynb
+++ b/02.ipynb
@@ -2,44 +2,58 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "All the IPython Notebooks in this lecture series are available at https://github.com/cwallraven/Python-Lectures/"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "#Print Statement"
+    "# print(Statement"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The **print** statement can be used in the following different ways :\n",
     "\n",
-    "    - print \"Hello World\"\n",
-    "    - print \"Hello\", <Variable Containing the String>\n",
-    "    - print \"Hello\" + <Variable Containing the String>\n",
-    "    - print \"Hello %s\" % <variable containing the string>"
+    "    - print(\"Hello World\"\n",
+    "    - print(\"Hello\", <Variable Containing the String>\n",
+    "    - print(\"Hello\" + <Variable Containing the String>\n",
+    "    - print(\"Hello %s\" % <variable containing the string>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"Hello World\""
+    "print(\"Hello World\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "In Python, single, double and triple quotes are used to denote a string.\n",
     "Most use single quotes when declaring a single character. \n",
@@ -50,31 +64,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print 'Hey'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print \"\"\"My name is Christian\n",
-    "I very much like to work in Matlab, but \n",
-    "I also sometimes dabble in Python.\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Strings can be assigned to variable say _string1_ and _string2_ which can called when using the print statement."
+    "print('Hey')"
    ]
   },
   {
@@ -82,38 +78,73 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "string1 = 'World'\n",
-    "print 'Hello', string1\n",
-    "\n",
-    "string2 = '!'\n",
-    "print 'Hello', string1, string2"
+    "print(\"\"\"My name is Christian\n",
+    "I very much like to work in Matlab, but \n",
+    "I also sometimes dabble in Python.\"\"\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "String concatenation is the \"addition\" of two strings. Observe that while concatenating there will be no space between the strings."
+    "Strings can be assigned to variable say _string1_ and _string2_ which can be called when using the print(statement."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "print 'Hello' + string1 + string2"
+    "string1 = 'World'\n",
+    "print('Hello', string1)\n",
+    "\n",
+    "string2 = '!'\n",
+    "print('Hello', string1, string2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "String concatenation is the \"addition\" of two strings. Observe that while concatenating there will be no white space between the strings, so that you would need to add them yourself using +' '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "print('Hello' + string1 + string2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**%s** is used to refer to a variable which contains a string."
    ]
@@ -122,16 +153,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"Hello %s\" % string1"
+    "print(\"Hello %s\" % string1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Similarly, when using other data types\n",
     "\n",
@@ -142,125 +178,154 @@
     "    - %x -> Hexadecimal\n",
     "    - %e -> exponential\n",
     "    \n",
-    "This can be used for conversions inside the print statement itself."
+    "This can be used for conversions inside the print(statement itself."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"Actual Number = %d\" %18\n",
-    "print \"Float of the number = %f\" %18\n",
-    "print \"Octal equivalent of the number = %o\" %18\n",
-    "print \"Hexadecimal equivalent of the number = %x\" %18\n",
-    "print \"Exponential equivalent of the number = %e\" %18"
+    "print(\"Actual Number = %d\" %18)\n",
+    "print(\"Float of the number = %f\" %18)\n",
+    "print(\"Octal equivalent of the number = %o\" %18)\n",
+    "print(\"Hexadecimal equivalent of the number = %x\" %18)\n",
+    "print(\"Exponential equivalent of the number = %e\" %18)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "When referring to multiple variables parenthesis is used."
+    "When referring to multiple variables, we use a parenthesis."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"Hello %s %s\" %(string1,string2)"
+    "print(\"Hello %s %s\" %(string1,string2))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "##Other Examples"
+    "## Other Examples"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "The following are other different ways the print statement can be put to use."
+    "The following are other different ways the print(statement can be put to use."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"I want %%d to be printed %s\" %'here'"
+    "print(\"I want %%d to be printed %s\" %'here')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print '_A'*10"
+    "print('_A'*10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"Jan\\nFeb\\nMar\\nApr\\nMay\\nJun\\nJul\\nAug\""
+    "print(\"Jan\\nFeb\\nMar\\nApr\\nMay\\nJun\\nJul\\nAug\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"I want \\\\n to be printed.\""
+    "print(\"I want \\\\n to be printed.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"\"\"\n",
+    "print(\"\"\"\n",
     "Routine:\n",
     "\\t- Eat\n",
     "\\t- Sleep\\n\\t- Repeat\n",
-    "\"\"\""
+    "\"\"\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "#PrecisionWidth and FieldWidth"
+    "# PrecisionWidth and FieldWidth"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Fieldwidth is the width of the entire number and precision is the width towards the right. One can alter these widths based on the requirements.\n",
     "\n",
@@ -271,7 +336,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -280,16 +347,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "Notice upto 6 decimal points are returned. To specify the number of decimal points, '%(fieldwidth).(precisionwidth)f' is used."
+    "Notice up to 6 decimal points are returned. To specify the number of decimal points, '%(fieldwidth).(precisionwidth)f' is used."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -298,7 +370,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "If the field width is set more than the necessary than the data right aligns itself to adjust to the specified values."
    ]
@@ -307,7 +382,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -316,7 +393,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Zero padding is done by adding a 0 at the start of fieldwidth."
    ]
@@ -325,7 +405,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -334,7 +416,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "For proper alignment, a space can be left blank in the field width so that when a negative number is used, proper alignment is maintained."
    ]
@@ -343,17 +428,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"% 9f\" % 3.121312312312\n",
-    "print \"% 9f\" % -3.121312312312"
+    "print(\"% 9f\" % 3.121312312312)\n",
+    "print(\"% 9f\" % -3.121312312312)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "'+' sign can be returned at the beginning of a positive number by adding a + sign at the beginning of the field width."
    ]
@@ -362,17 +452,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "print \"%+9f\" % 3.121312312312\n",
-    "print \"% 9f\" % -3.121312312312"
+    "print(\"%+9f\" % 3.121312312312)\n",
+    "print(\"% 9f\" % -3.121312312312)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "As mentioned above, the data right aligns itself when the field width mentioned is larger than the actualy field width. But left alignment can be done by specifying a negative symbol in the field width."
    ]
@@ -381,31 +476,42 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "\"%-9.3f\" % 3.121312312312"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
