--- a/01.ipynb
+++ b/01.ipynb
@@ -800,9 +800,9 @@
    },
    "outputs": [],
    "source": [
-    "print(range(3))\n",
-    "print(range(2,9))\n",
-    "print(range(2,27,8))"
+    "print(list(range(3)))\n",
+    "print(list(range(2,27,8)))\n",
+    "print(list(range(0,3)))"
    ]
   },
   {
