--- a/02.ipynb
+++ b/02.ipynb
@@ -17,7 +17,7 @@
     "editable": true
    },
    "source": [
-    "# print(Statement"
+    "# print Statement"
    ]
   },
   {
@@ -29,10 +29,10 @@
    "source": [
     "The **print** statement can be used in the following different ways :\n",
     "\n",
-    "    - print(\"Hello World\"\n",
-    "    - print(\"Hello\", <Variable Containing the String>\n",
-    "    - print(\"Hello\" + <Variable Containing the String>\n",
-    "    - print(\"Hello %s\" % <variable containing the string>"
+    "    - print(\"Hello World\")\n",
+    "    - print(\"Hello\", <Variable Containing the String>)\n",
+    "    - print(\"Hello\" + <Variable Containing the String>)\n",
+    "    - print(\"Hello %s\" % <variable containing the string>)"
    ]
   },
   {
@@ -95,7 +95,7 @@
     "editable": true
    },
    "source": [
-    "Strings can be assigned to variable say _string1_ and _string2_ which can be called when using the print(statement."
+    "Strings can be assigned to variable say _string1_ and _string2_ which can be called when using the print statement."
    ]
   },
   {
@@ -238,7 +238,7 @@
     "editable": true
    },
    "source": [
-    "The following are other different ways the print(statement can be put to use."
+    "The following are other different ways the print statement can be put to use."
    ]
   },
   {
@@ -365,7 +365,7 @@
    },
    "outputs": [],
    "source": [
-    "\"%.5f\" % 3.121312312312"
+    "\"%.10f\" % 3.121312312312"
    ]
   },
   {
@@ -484,15 +484,6 @@
    "source": [
     "\"%-9.3f\" % 3.121312312312"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
