--- a/06.ipynb
+++ b/06.ipynb
@@ -69,22 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Good morning!\n",
-      "Would you like some fries with that?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print( \"Good morning!\")\n",
     "print( \"Would you like some fries with that?\")"
@@ -142,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -157,21 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter your ingredient : 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ing1 = input('Please enter your ingredient : ')"
    ]
@@ -188,22 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Good morning!\n",
-      "Would you like some 1 with that?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "firstfunc(ing1)"
    ]
@@ -330,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -345,21 +319,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = times(4,5)\n",
     "print( c)"
@@ -377,25 +343,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function times in module __main__:\n",
-      "\n",
-      "times(x, y)\n",
-      "    This multiplies the two input arguments\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(times)"
    ]
@@ -590,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -619,62 +573,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "add_n(1,2,3,4,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "add_n(1,2,3)"
    ]
@@ -986,7 +904,7 @@
     "editable": true
    },
    "source": [
-    "**filter( )** function is used to filter out the values in a list. Note that **filter()** function returns the result in a new list."
+    "**filter( )** function is used to filter out the values in a list, for which a function will return true. Note that if you want to use the results of the **filter()** function properly, you should convert this to a new list."
    ]
   },
   {
@@ -1022,7 +940,7 @@
    },
    "outputs": [],
    "source": [
-    "filter(lambda x:x<5,list1)"
+    "print(list(filter(lambda x:x<5,list1)))"
    ]
   },
   {
@@ -1045,7 +963,7 @@
    },
    "outputs": [],
    "source": [
-    "map(lambda x:x<5, list1)"
+    "print(list(map(lambda x:x<5, list1)))"
    ]
   },
   {
@@ -1068,7 +986,7 @@
    },
    "outputs": [],
    "source": [
-    "filter(lambda x:x%4==0,list1)"
+    "print(list(filter(lambda x:x%4==0,list1)))"
    ]
   },
   {
@@ -1098,21 +1016,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 10 ipython notebook files in current directory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -1140,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1170,7 +1080,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
