--- a/07.ipynb
+++ b/07.ipynb
@@ -894,7 +894,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -903,7 +903,7 @@
     "class Artist(SoftwareEngineer):\n",
     "    def artform(self, job):\n",
     "        self.job = job\n",
-    "        print(self.name,\"is a\", self.job\n",
+    "        print(self.name,\"is a\", self.job)\n",
     "    def salary(self, value):\n",
     "        self.money = value\n",
     "        print(self.name,\"earns\",self.money)\n",
