--- a/08.ipynb
+++ b/08.ipynb
@@ -1054,7 +1054,8 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -1084,7 +1085,7 @@
    },
    "outputs": [],
    "source": [
-    "plot(x, y)       # line plot    "
+    "# plot(x, y)       # line plot    "
    ]
   },
   {
